--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Problems.
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI
 										<!-- , Looker &amp; Tableau -->
 										</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, PySpark, Excel, Git, JIRA, Google Analytics &amp; SEO</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Git, Microsoft 365, Statistics, Problem solving, Communication Skills, &amp; Attention to Detail</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>History, Researching and discovering new things.  </span></li>
 									
 								</ul>
